Minor spacing fixes.

--- a/styles.css
+++ b/styles.css
@@ -335,6 +335,7 @@ td.alive{
 }
 #tips ul{
   list-style-type:none;
+  padding:0;
 }
 
 #tips ul li{
